Ajout du fichier App.css et declaration dans App.html

--- a/App.html
+++ b/App.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Activite 1 : Git et Github</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="App.css">
 </head>
 <body>
 	<h1>Grand titre</h1>
