Ajout du fichier App.js et declaration dans App.html

--- a/App.html
+++ b/App.html
@@ -9,5 +9,7 @@
 	<h1>Grand titre</h1>
 	<h3>Petit titre</h3>
 	<button id="bouton">Click ?</button>
+
+	<script src="App.js"></script>
 </body>
 </html>
