--- a/App.html
+++ b/App.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Grand titre</h1>
 	<h3>Petit titre</h3>
-	<button id="bouton">Click ?</button>
+	<button id="bouton">Jaune ?</button>
 
 	<script src="App.js"></script>
 </body>
